# predict_stroke

./: .env.sample  README.md  Stroke_Prediction_Guassian_noise.ipynb  Stroke_Prediction__SMOTE.ipynb  pyproject.toml
predict_stroke/: default_settings.py
predict_stroke/cmd/: web.py
predict_stroke/models/: __init__.py  oauth2.py  scaler_model.py  stroke_model.py
predict_stroke/utils/scaler_model/: scaler.pkl
predict_stroke/utils/stroke_model/: stroke_prediction_model.h5
predict_stroke/web/: __init__.py  acl.py
predict_stroke/web/static/: package-lock.json  package.json
predict_stroke/web/templates/base/: base-layout.html  default-page.html
predict_stroke/web/templates/site/: index.html
predict_stroke/web/views/: sites.py
scripts/: init-admin.py  run-web
